fix: improve CLI error handling for client initialization
- Move Solr client initialization inside try-except block to properly catch and handle initialization errors\n- Ensures consistent error handling across all CLI commands\n- Fix failing tests for error handling in create, delete, info, batch, and get commands\n- Maintain proper error message context in logs\n\nThis change improves the robustness of the CLI by ensuring that any errors during client initialization are properly caught and reported to users with appropriate context.\n\nAlso:\n- Add large data files to .gitignore to prevent accidental commits

--- a/config.yaml.sample
+++ b/config.yaml.sample
@@ -1,52 +1,30 @@
+# Sample configuration for solr-manager
+
 default:
   connection:
-    url: localhost
-    port: 6333
-    api_key: ""
-    collection: my-collection
-  
-  vectors:
-    size: 256
-    distance: cosine
-    indexing_threshold: 0
-  
-  # Optional payload indices - uncomment and modify as needed
-  payload_indices:
-    - field: category
-      type: keyword
-    - field: created_at
-      type: datetime
-    - field: price
-      type: float
-    - field: description
-      type: text
+    # Base URL of your Solr instance (often includes /solr)
+    solr_url: "http://localhost:8983/solr"
+    # The target Solr collection name
+    collection: "my_solr_collection"
+
+    # --- Optional: Authentication ---
+    # Uncomment and provide credentials if your Solr instance requires authentication
+    # username: "your_solr_username"
+    # password: "your_solr_password"
+
+    # --- Optional: ZooKeeper Connection (for SolrCloud discovery) ---
+    # Uncomment if you prefer connecting via ZooKeeper instead of directly to a Solr node URL
+    # zk_hosts: "zk1:2181,zk2:2181,zk3:2181/solr" # Example ZK ensemble and chroot
 
 production:
   connection:
-    url: your-production-instance.region.cloud.qdrant.io
-    port: 6333
-    api_key: your-api-key-here
-    collection: production-collection
-  
-  vectors:
-    # Typical size for OpenAI ada-002 embeddings
-    size: 1536
-    distance: cosine
-    # Higher threshold for better indexing performance
-    indexing_threshold: 1000
-  
-  # Define production indices
-  payload_indices:
-    - field: product_id
-      type: keyword
-    - field: sku
-      type: keyword
-    - field: price
-      type: float
-    - field: in_stock
-      type: keyword
-    - field: timestamp
-      type: datetime
+    solr_url: "http://your-production-solr-node:8983/solr"
+    collection: "production_solr_collection"
+    # Optional: Production credentials
+    # username: "prod_username"
+    # password: "prod_password"
+    # Optional: Production ZooKeeper
+    # zk_hosts: "zk-prod1:2181,zk-prod2:2181/solr-prod"
 
 # You can define as many profiles as needed
 development:
