--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-qdrant-client>=1.7.0
-tqdm>=4.66.0
 pyyaml>=6.0
+pysolr>=3.9.0
 appdirs>=1.4.4
-pytest>=7.4.3
-pytest-cov>=6.0.0
+tqdm>=4.66.0 # For progress bars
+requests>=2.20 # Ensure present
